--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
         <title>Spacetours | Explore space at your own pace.</title>
     </head>
     <body>
-        
-        
+        <header class="header">
+            <div class="logo-box">
+                <img src="img/logo-white.png" alt="Logo" class="logo">
+            </div>
+            <div class="text-box">
+                <h1 class="heading-primary">
+                    <span class="heading-primary-main">In Space</span>
+                    <span class="heading-primary-sub">Where discovery occurs</span>
+                </h1>
+            </div>
+        </header>
     </body>
 </html>
