--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                     <span class="heading-primary-main">In Space</span>
                     <span class="heading-primary-sub">Where discovery occurs</span>
                 </h1>
+
+                <a href="#" class="btn btn-white btn-animated">Discover out tours.</a>
             </div>
         </header>
     </body>
