--- a/index.html
+++ b/index.html
@@ -20,11 +20,80 @@
             <div class="header__text-box">
                 <h1 class="heading-primary">
                     <span class="heading-primary--main">In Space</span>
-                    <span class="heading-primary--sub">Where discovery occurs</span>
+                    <span class="heading-primary--sub">Where worlds are discovered</span>
                 </h1>
 
                 <a href="#" class="btn btn--white btn--animated">Discover out tours.</a>
             </div>
         </header>
+        <section class="grid-test">
+            <div class="row">
+                <div class="col-1-of-2">
+                   This is a column 1 of 2
+                </div>
+                <div class="col-1-of-2">
+                    This is a column 1 of 2
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-3">
+                    This is a column 1 of 3
+                </div>
+                <div class="col-1-of-3">
+                    This is a column 1 of 3
+                </div>
+                <div class="col-1-of-3">
+                    This is a column 1 of 3
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-3">
+                    This is a column 1 of 3
+                </div>
+                <div class="col-2-of-3">
+                    This is a column 2 of 3
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-4">
+                    This is a column 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    This is a column 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    This is a column 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    This is a column 1 of 4
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-4">
+                    This is a column 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    This is a column 1 of 4
+                </div>
+                <div class="col-2-of-4">
+                    This is a column 2 of 4
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-4">
+                    This is a column 1 of 4
+                </div>
+                <div class="col-3-of-4">
+                    This is a column 3 of 4
+                </div>
+            </div>
+
+
+        </section>
     </body>
 </html>
