--- a/sandbox/index copy.html
+++ b/sandbox/index copy.html
@@ -29,29 +29,22 @@
 
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-big">
+                <div class="u-center-text">
                     <h2 class="heading-secondary">
                         Scenic tours for exploratory people.
                     </h2>
                 </div>
-                <div class="row">
-                    <div class="col-1-of-2">
-                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love space</h3>
-                        <p class="paragraph">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo incidunt molestias nulla ullam quia vero voluptate dolorem tempora fugit adipisci cumque ea consequatur.
-                        </p>
-
-                        <h3 class="heading-tertiary u-margin-bottom-small">Visit the planets you see from afar</h3>
-                        <p class="paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, a sapiente illo enim inventore quos obcaecati.
-                        </p>
-                        <a href="#" class="btn-text">Learn more &rarr;</a>
-                    </div>
-                    <div class="col-1-of-2">
-                        Image Composition
-                    </div>
-                </div>
             </section>
+
+            <div class="row">
+                <div class="col-1-of-2">
+                    Text content
+                </div>
+                <div class="col-1-of-2">
+                    Image Composition
+                </div>
+            </div>
+
         </main>
 
         <!-- <section class="grid-test">
