--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
+
+        <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
@@ -48,9 +50,56 @@
                         <a href="#" class="btn-text">Learn more &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
-                        Image Composition
+                        <div class="composition">
+                            <img src="img/spacetour1.jpeg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/spacetour2.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/spacetour3.jpeg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        </div>
                     </div>
                 </div>
+            </section>
+
+            <section class="section-features">
+
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo incidunt adipisicing. Ipsum explicabo incidunt.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Meet Martians</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo incidunt adipisicing. Ipsum explicabo incidunt.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-map"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo incidunt adipisicing. Ipsum explicabo incidunt.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo incidunt adipisicing. Ipsum explicabo incidunt.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
             </section>
         </main>
 
