--- a/img/Spacetours _ Explore space at your own pace._files/index.html
+++ b/img/Spacetours _ Explore space at your own pace._files/index.html
@@ -110,31 +110,22 @@
                 <div class="row">
                     <div class="col-1-of-3">
                         <div class="card">
-                            <div class="card__side card__side--front">
-                                FRONT
-                            </div>
-                            <div class="card__side card__side--back card__side--back-1">
-                                BACK
+                            <div class="card__side">
+                                Text
                             </div>
                         </div>
                     </div>
                     <div class="col-1-of-3">
                         <div class="card">
-                            <div class="card__side card__side--front">
-                                FRONT
-                            </div>
-                            <div class="card__side card__side--back">
-                                BACK
+                            <div class="card__side">
+                                Text
                             </div>
                         </div>
                     </div>
                     <div class="col-1-of-3">
                         <div class="card">
-                            <div class="card__side card__side--front">
-                                FRONT
-                            </div>
-                            <div class="card__side card__side--back">
-                                BACK
+                            <div class="card__side">
+                                Text
                             </div>
                         </div>
                     </div>
@@ -211,5 +202,42 @@
 
 
         </section>
-    </body>
+    <!-- Code injected by live-server -->
+<script type="text/javascript">
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function () {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					var parent = elem.parentElement || head;
+					parent.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					parent.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function (msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+				console.log('Live reload enabled.');
+				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+			}
+		})();
+	}
+	else {
+		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+	}
+	// ]]>
+</script></body>
 </html>
