--- a/index.html
+++ b/index.html
@@ -111,33 +111,102 @@
                     <div class="col-1-of-3">
                         <div class="card">
                             <div class="card__side card__side--front">
-                                FRONT
+                                <div class="card__picture card__picture--1">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--1">
+                                        The Moon Explorer
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>3 day tours</li>
+                                        <li>Up to 30 people</li>
+                                        <li>2 tour guides</li>
+                                        <li>Sleep in cozy hotels</li>
+                                        <li>Difficulty: Easy</li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="card__side card__side--back card__side--back-1">
-                                BACK
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$400</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-1-of-3">
                         <div class="card">
                             <div class="card__side card__side--front">
-                                FRONT
+                                <div class="card__picture card__picture--2">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--2">
+                                        Jupiter Journeying
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>10 day tours</li>
+                                        <li>Up to 1 people</li>
+                                        <li>2 tour guide</li>
+                                        <li>Sleep in spaceship</li>
+                                        <li>Difficulty: Medium</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="card__side card__side--back">
-                                BACK
+                            <div class="card__side card__side--back card__side--back-2">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$600</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-1-of-3">
                         <div class="card">
                             <div class="card__side card__side--front">
-                                FRONT
+                                <div class="card__picture card__picture--3">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--3">
+                                        Starstruck Sighting
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>1 day tour</li>
+                                        <li>Up to 5 people</li>
+                                        <li>1 tour guides</li>
+                                        <li>Sleep in space cabin</li>
+                                        <li>Difficulty: Hard</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="card__side card__side--back">
-                                BACK
+                            <div class="card__side card__side--back card__side--back-3">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$1200</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now</a>
+                                </div>
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn btn--blue">Discover all tours</a>
                 </div>
             </section>
         </main>
