--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <span class="heading-primary--sub">Where worlds are discovered</span>
                 </h1>
 
-                <a href="#" class="btn btn--white btn--animated">Discover out tours.</a>
+                <a href="#" class="btn btn--white btn--animated">Discover our tours.</a>
             </div>
         </header>
 
@@ -209,6 +209,103 @@
                     <a href="#" class="btn btn--blue">Discover all tours</a>
                 </div>
             </section>
+            <section class="section-stories">
+
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="img/launch.mp4" type="video/mp4">
+                        <!-- <source src="img/video.webm" type="video/webm"/> -->
+                        Your browser does not support embedded videos.
+                    </video>
+                </div>
+
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        We make people genuinely happy
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">Mary Smith</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo incidunt molestias nulla ullam quia vero voluptate dolorem tempora fugit adipisci cumque ea consequatur voluptate dolorem tempora fugit adipisci cumque ea consequatur.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">Jack Wilson</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">My life is completely different now.</h3>
+                            <p class="paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo incidunt molestias nulla ullam quia vero voluptate dolorem tempora fugit adipisci cumque ea consequatur voluptate dolorem tempora fugit adipisci cumque ea consequatur.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-margin-top-big">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
+                </div>
+
+            </section>
+
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                    Start booking now!
+                                </h2>
+                            </div>
+                            <form action="#" class="form">
+                                <div class="form__group">
+                                    <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                                    <label for="name" class="form__label">Full Name</label>
+                                </div>
+                                <div class="form__group">
+                                    <input type="email" class="form__input" placeholder="Email Address" id="email" required>
+                                    <label for="name" class="form__label">Email Address</label>
+                                </div>
+
+                                <div class="form__group u-margin-bottom-medium">
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="small" name="size">
+                                        <label for="small" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            Small tour group
+                                        </label>
+                                    </div>
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="large" name="size">
+                                        <label for="large" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            Large tour group
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="form__group">
+                                    <!-- We need an actual button, not just an anchor link because buttons allow us to enter forms -->
+                                    <button class="btn btn--blue">Next Step</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
         <!-- <section class="grid-test">
