--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
         <title>Spacetours | Explore space at your own pace.</title>
     </head>
     <body>
+        <div class="navigation">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+            <label for="navi-toggle" class="navigation__button">
+                <span class="navigation__icon">&nbsp;</span>
+            </label>
+
+            <div class="navigation__background">&nbsp;</div>
+
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Spacetours</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Benefits</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular Tours</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+                </ul>
+            </nav>
+        </div>
+
         <header class="header">
             <div class="header__logo-box">
                 <img src="img/logo-white.png" alt="Logo" class="header__logo">
@@ -25,7 +44,7 @@
                     <span class="heading-primary--sub">Where worlds are discovered</span>
                 </h1>
 
-                <a href="#" class="btn btn--white btn--animated">Discover our tours.</a>
+                <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours.</a>
             </div>
         </header>
 
@@ -100,7 +119,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -135,7 +154,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$400</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now</a>
+                                    <a href="#popup" class="btn btn--white">Book now</a>
                                 </div>
                             </div>
                         </div>
@@ -167,7 +186,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$600</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now</a>
+                                    <a href="#popup" class="btn btn--white">Book now</a>
                                 </div>
                             </div>
                         </div>
@@ -199,7 +218,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$1200</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now</a>
+                                    <a href="#popup" class="btn btn--white">Book now</a>
                                 </div>
                             </div>
                         </div>
@@ -305,8 +324,49 @@
                     </div>
                 </div>
             </section>
-
         </main>
+
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer__copyright">
+                        Built by <a href="#" class="footer__link">Douglas Park</a> for Adv CSS & Sass course. <a href="#" class="footer__link">Advanced CSS and Sass</a>
+                    </p>
+                </div>
+            </div>
+        </footer>
+
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-medium">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla facilisi cras fermentum odio eu feugiat pretium. Elementum eu facilisis sed odio morbi. Gravida in fermentum et sollicitudin ac. Accumsan tortor posuere ac ut consequat. Massa tincidunt nunc pulvinar sapien et ligula. Risus viverra adipiscing at in tellus integer feugiat. Laoreet id donec ultrices tincidunt arcu non sodales. Sit amet nulla facilisi morbi tempus iaculis urna id volutpat. Enim nec dui nunc mattis enim ut tellus elementum. Amet nisl purus in mollis. Nunc vel risus commodo viverra maecenas. Aliquet risus feugiat in ante metus dictum at tempor. Vel facilisis volutpat est velit egestas dui id. Nisi lacus sed viverra tellus in. Hac habitasse platea dictumst quisque sagittis purus sit amet. Est ullamcorper eget nulla facilisi etiam dignissim diam quis enim.
+                    </p>
+                    <a href="#" class="btn btn--blue">Book now</a>
+                </div>
+            </div>
+        </div>
 
         <!-- <section class="grid-test">
             <div class="row">
