--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
-
-        <link rel="stylesheet" href="css/icon-font.css">
-        <link rel="stylesheet" href="css/icon-font.css">
+        <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
@@ -70,6 +66,23 @@
                     </div>
                     <div class="col-1-of-2">
                         <div class="composition">
+                            <!-- For responsive design -->
+                            <!-- width descriptors (300px, 100px) for resolution switching -->
+                            <!-- <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                                alt="Photo 1"
+                                class="composition__photo composition__photo--p1"
+                                src="img/nat-1-large.jpg">
+                            <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                                alt="Photo 2"
+                                class="composition__photo composition__photo--p2"
+                                src="img/nat-2-large.jpg">
+                            <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                                alt="Photo 3"
+                                class="composition__photo composition__photo--p3"
+                                src="img/nat-3-large.jpg"> -->
                             <img src="img/spacetour1.jpeg" alt="Photo 1" class="composition__photo composition__photo--p1">
                             <img src="img/spacetour2.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
                             <img src="img/spacetour3.jpeg" alt="Photo 3" class="composition__photo composition__photo--p3">
@@ -224,7 +237,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="u-center-text u-margin-top-huge">
+                <div class="u-center-text u-margin-top-big">
                     <a href="#" class="btn btn--blue">Discover all tours</a>
                 </div>
             </section>
@@ -328,7 +341,10 @@
 
         <footer class="footer">
             <div class="footer__logo-box">
-                <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+                <picture class="footer__logo">
+                    <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)">
+                    <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" class="footer__logo" src="img/logo-green-2x.png">
+                </picture>
             </div>
             <div class="row">
                 <div class="col-1-of-2">
